--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <meta  http-equiv="Content-Language" content="pt-BR" />
+    <meta name="robots" content="index" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:url" content="https://nuryvidros.com/" />
+    <meta property="og:site_name" content="Nury Vidros" />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nury Vidros</title>
+    <meta name="description" content="A empresa é especializada em vidros temperados e comuns, espelhos e esquadrias em alumínio, com mais de 15 anos de experiência." />
+    <meta name="keywords" content="vidraçaria,vidros,portas em vidro,janelas,esquadrias,coberturas,pergolados,box,cercados,portas retrateis,espelhos,vidros temperados,vidro comum" />
     <link rel="icon" href="./img/logo/logo-icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
