--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta  http-equiv="Content-Language" content="pt-BR" />
+    <meta http-equiv="Content-Language" content="pt-BR" />
     <meta name="robots" content="index" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="pt_BR" />
@@ -10,12 +10,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nury Vidros</title>
-    <meta name="description" content="A empresa é especializada em vidros temperados e comuns, espelhos e esquadrias em alumínio, com mais de 15 anos de experiência." />
-    <meta name="keywords" content="vidraçaria,vidros,portas em vidro,janelas,esquadrias,coberturas,pergolados,box,cercados,portas retrateis,espelhos,vidros temperados,vidro comum" />
-    <link rel="icon" href="./img/logo/logo-icon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <meta
+      name="description"
+      content="A empresa é especializada em vidros temperados e comuns, espelhos e esquadrias em alumínio, com mais de 15 anos de experiência."
+    />
+    <meta
+      name="keywords"
+      content="vidraçaria,vidros,portas em vidro,janelas,esquadrias,coberturas,pergolados,box,cercados,portas retrateis,espelhos,vidros temperados,vidro comum"
+    />
+    <link rel="icon" href="./img/logo/logo-icon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
